# node-diff-harness

./: .gitignore  .gitmodules  Cargo.toml  README.md  justfile
adapters/elixir-runner/: mix.exs
adapters/elixir-runner/config/: fuzz.exs
adapters/elixir-runner/lib/: cli.ex  normalizer.ex  protocol_adapter.ex  trace_executor.ex  trace_parser.ex  tx_adapter.ex  vanilla_validator_nif.ex
adapters/elixir-runner/native/vanilla_validator_nif/: Cargo.toml
adapters/elixir-runner/native/vanilla_validator_nif/src/: lib.rs
adapters/elixir-runner/test/: protocol_adapter_test.exs
adapters/rust-step/: Cargo.toml
adapters/rust-step/src/: lib.rs  normalizer.rs  protocol_adapter.rs  tx_adapter.rs  vanilla_validator.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: elixir_oracle.rs  fuzz_protocol.rs
patches/: ex_bakeware.patch
proto/: Cargo.toml
proto/src/: lib.rs  trace.rs
replay/: Cargo.toml
replay/src/: elixir_runner.rs  main.rs
test-traces/: peers_v2_test.json  ping_test.json  txpool_test.json  zero_ping_test.json
test-utils/: Cargo.toml
test-utils/src/: create_test_trace.rs  lib.rs
