[workspace]
resolver = "2"
members = [
    "proto",
    "adapters/rust-step",
    "replay",
    "fuzz",
    "test-utils",
]
exclude = [
    "rs_node",  # git submodule
    "node",     # git submodule
    "adapters/elixir-runner/deps/blake3/native/blake3",  # Elixir dependency
    "adapters/elixir-runner/deps/bls_ex/native/bls",     # Elixir dependency
    "adapters/elixir-runner/native/vanilla_validator_nif",  # Elixir NIF
]

[workspace.dependencies]
# Common dependencies across crates
tokio = { version = "1.0", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1.0"
thiserror = "1.0" 
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"
prost = "0.12"

# Fuzzing dependencies
libfuzzer-sys = "0.4"
arbitrary = { version = "1.0", features = ["derive"] }

# Crypto dependencies  
blake3 = "1.5"
sha2 = "0.10"

# For subprocess communication
nix = "0.28"

[profile.release]
debug = true  # Keep symbols for better crash debugging

# Patches needed for rs_node compatibility
[patch.crates-io]
bls12_381 = { git = "https://github.com/vans163/bls12_381" } # has newer deps
reed-solomon-simd = { git = "https://github.com/AndersTrier/reed-solomon-simd" } # 3.1.0