[package]
name = "test-utils"
version = "0.1.0"
edition = "2021"
description = "Test utilities for differential fuzzing"

[[bin]]
name = "create-test-trace"
path = "src/create_test_trace.rs"

[dependencies]
proto = { path = "../proto" }
serde_json = "1.0"
anyhow.workspace = true
sha2 = "0.10"
hex = "0.4"